dataset1235/2025-2/2318198438/users/1967357790/executions/2601575092_354104495.log
== RUN (2025-08-12 00:49:58)
-- CODE: 
ano = int(input())
calculo = ano - 1909
print(calculo)
print("Em " , ano , "a UFAM completou" , calculo ,"anos de fundação.")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2020
---- correct output:
Em 2020 a UFAM completou 111 anos de fundação.
---- user output:
Em  2020 a UFAM completou 111 anos de fundação.
-- TEST CASE 2:
---- input:
2024
---- correct output:
Em 2024 a UFAM completou 115 anos de fundação.
---- user output:
Em  2024 a UFAM completou 115 anos de fundação.
-- TEST CASE 3:
---- input:
1959
---- correct output:
Em 1959 a UFAM completou 50 anos de fundação.
---- user output:
Em  1959 a UFAM completou 50 anos de fundação.
-- TEST CASE 4:
---- input:
1985
---- correct output:
Em 1985 a UFAM completou 76 anos de fundação.
---- user output:
Em  1985 a UFAM completou 76 anos de fundação.
-- TEST CASE 5:
---- input:
2009
---- correct output:
Em 2009 a UFAM completou 100 anos de fundação.
---- user output:
Em  2009 a UFAM completou 100 anos de fundação.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 00:49:07)
-- CODE: 
ano = int(input())
calculo = ano - 1909
print(calculo)
print("Em " + ano + ",a UFAM completou" + calculo +"anos de fundação.")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2020
---- correct output:
Em 2020 a UFAM completou 111 anos de fundação.
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print("Em " + ano + ",a UFAM completou" + calculo +"anos de fundação.")
          ~~~~~~^~~~~
TypeError: can only concatenate str (not "int") to str
-- TEST CASE 2:
---- input:
2024
---- correct output:
Em 2024 a UFAM completou 115 anos de fundação.
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print("Em " + ano + ",a UFAM completou" + calculo +"anos de fundação.")
          ~~~~~~^~~~~
TypeError: can only concatenate str (not "int") to str
-- TEST CASE 3:
---- input:
1959
---- correct output:
Em 1959 a UFAM completou 50 anos de fundação.
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print("Em " + ano + ",a UFAM completou" + calculo +"anos de fundação.")
          ~~~~~~^~~~~
TypeError: can only concatenate str (not "int") to str
-- TEST CASE 4:
---- input:
1985
---- correct output:
Em 1985 a UFAM completou 76 anos de fundação.
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print("Em " + ano + ",a UFAM completou" + calculo +"anos de fundação.")
          ~~~~~~^~~~~
TypeError: can only concatenate str (not "int") to str
-- TEST CASE 5:
---- input:
2009
---- correct output:
Em 2009 a UFAM completou 100 anos de fundação.
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print("Em " + ano + ",a UFAM completou" + calculo +"anos de fundação.")
          ~~~~~~^~~~~
TypeError: can only concatenate str (not "int") to str
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 00:44:01)
-- CODE: 
ano = input()
print("Em " + ano)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2020
---- correct output:
Em 2020 a UFAM completou 111 anos de fundação.
---- user output:
Em 2020
-- TEST CASE 2:
---- input:
2024
---- correct output:
Em 2024 a UFAM completou 115 anos de fundação.
---- user output:
Em 2024
-- TEST CASE 3:
---- input:
1959
---- correct output:
Em 1959 a UFAM completou 50 anos de fundação.
---- user output:
Em 1959
-- TEST CASE 4:
---- input:
1985
---- correct output:
Em 1985 a UFAM completou 76 anos de fundação.
---- user output:
Em 1985
-- TEST CASE 5:
---- input:
2009
---- correct output:
Em 2009 a UFAM completou 100 anos de fundação.
---- user output:
Em 2009
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 00:47:49)
-- CODE: 
ano = int(input())
int calculo = ano - 1909
print(calculo)
print("Em " + ano + ",a UFAM completou" + calculo + "anos de fundação.")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2020
---- correct output:
Em 2020 a UFAM completou 111 anos de fundação.
-- ERROR:
File "XXXX", line 2
    int calculo = ano - 1909
        ^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
2024
---- correct output:
Em 2024 a UFAM completou 115 anos de fundação.
-- ERROR:
File "XXXX", line 2
    int calculo = ano - 1909
        ^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
1959
---- correct output:
Em 1959 a UFAM completou 50 anos de fundação.
-- ERROR:
File "XXXX", line 2
    int calculo = ano - 1909
        ^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
1985
---- correct output:
Em 1985 a UFAM completou 76 anos de fundação.
-- ERROR:
File "XXXX", line 2
    int calculo = ano - 1909
        ^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
2009
---- correct output:
Em 2009 a UFAM completou 100 anos de fundação.
-- ERROR:
File "XXXX", line 2
    int calculo = ano - 1909
        ^^^^^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 00:46:09)
-- CODE: 
ano = input()
calculo = ano - 1909
print("Em " + ano + ", a UFAM completou" + calculo + "anos de fundação.")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2020
---- correct output:
Em 2020 a UFAM completou 111 anos de fundação.
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    calculo = ano - 1909
              ~~~~^~~~~~
TypeError: unsupported operand type(s) for -: 'str' and 'int'
-- TEST CASE 2:
---- input:
2024
---- correct output:
Em 2024 a UFAM completou 115 anos de fundação.
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    calculo = ano - 1909
              ~~~~^~~~~~
TypeError: unsupported operand type(s) for -: 'str' and 'int'
-- TEST CASE 3:
---- input:
1959
---- correct output:
Em 1959 a UFAM completou 50 anos de fundação.
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    calculo = ano - 1909
              ~~~~^~~~~~
TypeError: unsupported operand type(s) for -: 'str' and 'int'
-- TEST CASE 4:
---- input:
1985
---- correct output:
Em 1985 a UFAM completou 76 anos de fundação.
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    calculo = ano - 1909
              ~~~~^~~~~~
TypeError: unsupported operand type(s) for -: 'str' and 'int'
-- TEST CASE 5:
---- input:
2009
---- correct output:
Em 2009 a UFAM completou 100 anos de fundação.
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    calculo = ano - 1909
              ~~~~^~~~~~
TypeError: unsupported operand type(s) for -: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 00:48:06)
-- CODE: 
ano = int(input())
calculo = ano - 1909
print(calculo)
print("Em " + ano + ",a UFAM completou" + calculo + "anos de fundação.")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2020
---- correct output:
Em 2020 a UFAM completou 111 anos de fundação.
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print("Em " + ano + ",a UFAM completou" + calculo + "anos de fundação.")
          ~~~~~~^~~~~
TypeError: can only concatenate str (not "int") to str
-- TEST CASE 2:
---- input:
2024
---- correct output:
Em 2024 a UFAM completou 115 anos de fundação.
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print("Em " + ano + ",a UFAM completou" + calculo + "anos de fundação.")
          ~~~~~~^~~~~
TypeError: can only concatenate str (not "int") to str
-- TEST CASE 3:
---- input:
1959
---- correct output:
Em 1959 a UFAM completou 50 anos de fundação.
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print("Em " + ano + ",a UFAM completou" + calculo + "anos de fundação.")
          ~~~~~~^~~~~
TypeError: can only concatenate str (not "int") to str
-- TEST CASE 4:
---- input:
1985
---- correct output:
Em 1985 a UFAM completou 76 anos de fundação.
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print("Em " + ano + ",a UFAM completou" + calculo + "anos de fundação.")
          ~~~~~~^~~~~
TypeError: can only concatenate str (not "int") to str
-- TEST CASE 5:
---- input:
2009
---- correct output:
Em 2009 a UFAM completou 100 anos de fundação.
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print("Em " + ano + ",a UFAM completou" + calculo + "anos de fundação.")
          ~~~~~~^~~~~
TypeError: can only concatenate str (not "int") to str
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 00:44:04)
-- CODE: 
ano = input()
print("Em " + ano)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2020
---- correct output:
Em 2020 a UFAM completou 111 anos de fundação.
---- user output:
Em 2020
-- TEST CASE 2:
---- input:
2024
---- correct output:
Em 2024 a UFAM completou 115 anos de fundação.
---- user output:
Em 2024
-- TEST CASE 3:
---- input:
1959
---- correct output:
Em 1959 a UFAM completou 50 anos de fundação.
---- user output:
Em 1959
-- TEST CASE 4:
---- input:
1985
---- correct output:
Em 1985 a UFAM completou 76 anos de fundação.
---- user output:
Em 1985
-- TEST CASE 5:
---- input:
2009
---- correct output:
Em 2009 a UFAM completou 100 anos de fundação.
---- user output:
Em 2009
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-12 00:44:02)
-- CODE: 
ano = input()
print("Em " + ano)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
2020
---- correct output:
Em 2020 a UFAM completou 111 anos de fundação.
---- user output:
Em 2020
-- TEST CASE 2:
---- input:
2024
---- correct output:
Em 2024 a UFAM completou 115 anos de fundação.
---- user output:
Em 2024
-- TEST CASE 3:
---- input:
1959
---- correct output:
Em 1959 a UFAM completou 50 anos de fundação.
---- user output:
Em 1959
-- TEST CASE 4:
---- input:
1985
---- correct output:
Em 1985 a UFAM completou 76 anos de fundação.
---- user output:
Em 1985
-- TEST CASE 5:
---- input:
2009
---- correct output:
Em 2009 a UFAM completou 100 anos de fundação.
---- user output:
Em 2009
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 00:48:52)
-- CODE: 
ano = int(input())
calculo = ano - 1909
print(calculo)
print("Em " + ano + ",a UFAM completou" + calculo + "anos de fundação.")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2020
---- correct output:
Em 2020 a UFAM completou 111 anos de fundação.
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print("Em " + ano + ",a UFAM completou" + calculo + "anos de fundação.")
          ~~~~~~^~~~~
TypeError: can only concatenate str (not "int") to str
-- TEST CASE 2:
---- input:
2024
---- correct output:
Em 2024 a UFAM completou 115 anos de fundação.
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print("Em " + ano + ",a UFAM completou" + calculo + "anos de fundação.")
          ~~~~~~^~~~~
TypeError: can only concatenate str (not "int") to str
-- TEST CASE 3:
---- input:
1959
---- correct output:
Em 1959 a UFAM completou 50 anos de fundação.
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print("Em " + ano + ",a UFAM completou" + calculo + "anos de fundação.")
          ~~~~~~^~~~~
TypeError: can only concatenate str (not "int") to str
-- TEST CASE 4:
---- input:
1985
---- correct output:
Em 1985 a UFAM completou 76 anos de fundação.
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print("Em " + ano + ",a UFAM completou" + calculo + "anos de fundação.")
          ~~~~~~^~~~~
TypeError: can only concatenate str (not "int") to str
-- TEST CASE 5:
---- input:
2009
---- correct output:
Em 2009 a UFAM completou 100 anos de fundação.
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print("Em " + ano + ",a UFAM completou" + calculo + "anos de fundação.")
          ~~~~~~^~~~~
TypeError: can only concatenate str (not "int") to str
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 00:47:19)
-- CODE: 
ano = int(input())
calculo = ano - 1909
print(calculo)
print("Em " + ano + ",a UFAM completou" + calculo + "anos de fundação.")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2020
---- correct output:
Em 2020 a UFAM completou 111 anos de fundação.
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print("Em " + ano + ",a UFAM completou" + calculo + "anos de fundação.")
          ~~~~~~^~~~~
TypeError: can only concatenate str (not "int") to str
-- TEST CASE 2:
---- input:
2024
---- correct output:
Em 2024 a UFAM completou 115 anos de fundação.
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print("Em " + ano + ",a UFAM completou" + calculo + "anos de fundação.")
          ~~~~~~^~~~~
TypeError: can only concatenate str (not "int") to str
-- TEST CASE 3:
---- input:
1959
---- correct output:
Em 1959 a UFAM completou 50 anos de fundação.
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print("Em " + ano + ",a UFAM completou" + calculo + "anos de fundação.")
          ~~~~~~^~~~~
TypeError: can only concatenate str (not "int") to str
-- TEST CASE 4:
---- input:
1985
---- correct output:
Em 1985 a UFAM completou 76 anos de fundação.
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print("Em " + ano + ",a UFAM completou" + calculo + "anos de fundação.")
          ~~~~~~^~~~~
TypeError: can only concatenate str (not "int") to str
-- TEST CASE 5:
---- input:
2009
---- correct output:
Em 2009 a UFAM completou 100 anos de fundação.
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print("Em " + ano + ",a UFAM completou" + calculo + "anos de fundação.")
          ~~~~~~^~~~~
TypeError: can only concatenate str (not "int") to str
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 00:43:55)
-- CODE: 
ano = input()
print("Em" + ano)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2020
---- correct output:
Em 2020 a UFAM completou 111 anos de fundação.
---- user output:
Em2020
-- TEST CASE 2:
---- input:
2024
---- correct output:
Em 2024 a UFAM completou 115 anos de fundação.
---- user output:
Em2024
-- TEST CASE 3:
---- input:
1959
---- correct output:
Em 1959 a UFAM completou 50 anos de fundação.
---- user output:
Em1959
-- TEST CASE 4:
---- input:
1985
---- correct output:
Em 1985 a UFAM completou 76 anos de fundação.
---- user output:
Em1985
-- TEST CASE 5:
---- input:
2009
---- correct output:
Em 2009 a UFAM completou 100 anos de fundação.
---- user output:
Em2009
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 00:48:45)
-- CODE: 
ano = int(input())
calculo = ano - 1909
print(calculo)
print("Em " + ano + ",a UFAM completou," + calculo + ", anos de fundação.")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2020
---- correct output:
Em 2020 a UFAM completou 111 anos de fundação.
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print("Em " + ano + ",a UFAM completou," + calculo + ", anos de fundação.")
          ~~~~~~^~~~~
TypeError: can only concatenate str (not "int") to str
-- TEST CASE 2:
---- input:
2024
---- correct output:
Em 2024 a UFAM completou 115 anos de fundação.
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print("Em " + ano + ",a UFAM completou," + calculo + ", anos de fundação.")
          ~~~~~~^~~~~
TypeError: can only concatenate str (not "int") to str
-- TEST CASE 3:
---- input:
1959
---- correct output:
Em 1959 a UFAM completou 50 anos de fundação.
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print("Em " + ano + ",a UFAM completou," + calculo + ", anos de fundação.")
          ~~~~~~^~~~~
TypeError: can only concatenate str (not "int") to str
-- TEST CASE 4:
---- input:
1985
---- correct output:
Em 1985 a UFAM completou 76 anos de fundação.
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print("Em " + ano + ",a UFAM completou," + calculo + ", anos de fundação.")
          ~~~~~~^~~~~
TypeError: can only concatenate str (not "int") to str
-- TEST CASE 5:
---- input:
2009
---- correct output:
Em 2009 a UFAM completou 100 anos de fundação.
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print("Em " + ano + ",a UFAM completou," + calculo + ", anos de fundação.")
          ~~~~~~^~~~~
TypeError: can only concatenate str (not "int") to str
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-12 00:47:18)
-- CODE: 
ano = int(input())
calculo = ano - 1909
print(calculo)
print("Em " + ano + ",a UFAM completou" + calculo + "anos de fundação.")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2020
---- correct output:
Em 2020 a UFAM completou 111 anos de fundação.
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print("Em " + ano + ",a UFAM completou" + calculo + "anos de fundação.")
          ~~~~~~^~~~~
TypeError: can only concatenate str (not "int") to str
-- TEST CASE 2:
---- input:
2024
---- correct output:
Em 2024 a UFAM completou 115 anos de fundação.
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print("Em " + ano + ",a UFAM completou" + calculo + "anos de fundação.")
          ~~~~~~^~~~~
TypeError: can only concatenate str (not "int") to str
-- TEST CASE 3:
---- input:
1959
---- correct output:
Em 1959 a UFAM completou 50 anos de fundação.
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print("Em " + ano + ",a UFAM completou" + calculo + "anos de fundação.")
          ~~~~~~^~~~~
TypeError: can only concatenate str (not "int") to str
-- TEST CASE 4:
---- input:
1985
---- correct output:
Em 1985 a UFAM completou 76 anos de fundação.
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print("Em " + ano + ",a UFAM completou" + calculo + "anos de fundação.")
          ~~~~~~^~~~~
TypeError: can only concatenate str (not "int") to str
-- TEST CASE 5:
---- input:
2009
---- correct output:
Em 2009 a UFAM completou 100 anos de fundação.
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print("Em " + ano + ",a UFAM completou" + calculo + "anos de fundação.")
          ~~~~~~^~~~~
TypeError: can only concatenate str (not "int") to str
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 00:47:56)
-- CODE: 
ano = int(input())
var calculo = ano - 1909
print(calculo)
print("Em " + ano + ",a UFAM completou" + calculo + "anos de fundação.")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2020
---- correct output:
Em 2020 a UFAM completou 111 anos de fundação.
-- ERROR:
File "XXXX", line 2
    var calculo = ano - 1909
        ^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
2024
---- correct output:
Em 2024 a UFAM completou 115 anos de fundação.
-- ERROR:
File "XXXX", line 2
    var calculo = ano - 1909
        ^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
1959
---- correct output:
Em 1959 a UFAM completou 50 anos de fundação.
-- ERROR:
File "XXXX", line 2
    var calculo = ano - 1909
        ^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
1985
---- correct output:
Em 1985 a UFAM completou 76 anos de fundação.
-- ERROR:
File "XXXX", line 2
    var calculo = ano - 1909
        ^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
2009
---- correct output:
Em 2009 a UFAM completou 100 anos de fundação.
-- ERROR:
File "XXXX", line 2
    var calculo = ano - 1909
        ^^^^^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 00:46:23)
-- CODE: 
ano = int(input())
calculo = ano - 1909
print("Em " + ano + ", a UFAM completou" + calculo + "anos de fundação.")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2020
---- correct output:
Em 2020 a UFAM completou 111 anos de fundação.
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print("Em " + ano + ", a UFAM completou" + calculo + "anos de fundação.")
          ~~~~~~^~~~~
TypeError: can only concatenate str (not "int") to str
-- TEST CASE 2:
---- input:
2024
---- correct output:
Em 2024 a UFAM completou 115 anos de fundação.
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print("Em " + ano + ", a UFAM completou" + calculo + "anos de fundação.")
          ~~~~~~^~~~~
TypeError: can only concatenate str (not "int") to str
-- TEST CASE 3:
---- input:
1959
---- correct output:
Em 1959 a UFAM completou 50 anos de fundação.
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print("Em " + ano + ", a UFAM completou" + calculo + "anos de fundação.")
          ~~~~~~^~~~~
TypeError: can only concatenate str (not "int") to str
-- TEST CASE 4:
---- input:
1985
---- correct output:
Em 1985 a UFAM completou 76 anos de fundação.
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print("Em " + ano + ", a UFAM completou" + calculo + "anos de fundação.")
          ~~~~~~^~~~~
TypeError: can only concatenate str (not "int") to str
-- TEST CASE 5:
---- input:
2009
---- correct output:
Em 2009 a UFAM completou 100 anos de fundação.
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print("Em " + ano + ", a UFAM completou" + calculo + "anos de fundação.")
          ~~~~~~^~~~~
TypeError: can only concatenate str (not "int") to str
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-12 00:50:18)
-- CODE: 
ano = int(input())
calculo = ano - 1909
print(calculo)
print("Em", ano ,"a UFAM completou",calculo,"anos de fundação.")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
2020
---- correct output:
Em 2020 a UFAM completou 111 anos de fundação.
---- user output:
Em 2020 a UFAM completou 111 anos de fundação.
-- TEST CASE 2:
---- input:
2024
---- correct output:
Em 2024 a UFAM completou 115 anos de fundação.
---- user output:
Em 2024 a UFAM completou 115 anos de fundação.
-- TEST CASE 3:
---- input:
1959
---- correct output:
Em 1959 a UFAM completou 50 anos de fundação.
---- user output:
Em 1959 a UFAM completou 50 anos de fundação.
-- TEST CASE 4:
---- input:
1985
---- correct output:
Em 1985 a UFAM completou 76 anos de fundação.
---- user output:
Em 1985 a UFAM completou 76 anos de fundação.
-- TEST CASE 5:
---- input:
2009
---- correct output:
Em 2009 a UFAM completou 100 anos de fundação.
---- user output:
Em 2009 a UFAM completou 100 anos de fundação.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 00:45:12)
-- CODE: 
ano = input()
print("Em " + ano + ", a UFAM completou" + ano - 1909 + "anos de fundação.")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2020
---- correct output:
Em 2020 a UFAM completou 111 anos de fundação.
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print("Em " + ano + ", a UFAM completou" + ano - 1909 + "anos de fundação.")
          ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~
TypeError: unsupported operand type(s) for -: 'str' and 'int'
-- TEST CASE 2:
---- input:
2024
---- correct output:
Em 2024 a UFAM completou 115 anos de fundação.
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print("Em " + ano + ", a UFAM completou" + ano - 1909 + "anos de fundação.")
          ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~
TypeError: unsupported operand type(s) for -: 'str' and 'int'
-- TEST CASE 3:
---- input:
1959
---- correct output:
Em 1959 a UFAM completou 50 anos de fundação.
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print("Em " + ano + ", a UFAM completou" + ano - 1909 + "anos de fundação.")
          ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~
TypeError: unsupported operand type(s) for -: 'str' and 'int'
-- TEST CASE 4:
---- input:
1985
---- correct output:
Em 1985 a UFAM completou 76 anos de fundação.
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print("Em " + ano + ", a UFAM completou" + ano - 1909 + "anos de fundação.")
          ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~
TypeError: unsupported operand type(s) for -: 'str' and 'int'
-- TEST CASE 5:
---- input:
2009
---- correct output:
Em 2009 a UFAM completou 100 anos de fundação.
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print("Em " + ano + ", a UFAM completou" + ano - 1909 + "anos de fundação.")
          ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~
TypeError: unsupported operand type(s) for -: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 00:46:54)
-- CODE: 
ano = int(input())
calculo = ano - 1909
print(calculo)
print("Em " + ano + ", a UFAM completou" + calculo + "anos de fundação.")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2020
---- correct output:
Em 2020 a UFAM completou 111 anos de fundação.
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print("Em " + ano + ", a UFAM completou" + calculo + "anos de fundação.")
          ~~~~~~^~~~~
TypeError: can only concatenate str (not "int") to str
-- TEST CASE 2:
---- input:
2024
---- correct output:
Em 2024 a UFAM completou 115 anos de fundação.
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print("Em " + ano + ", a UFAM completou" + calculo + "anos de fundação.")
          ~~~~~~^~~~~
TypeError: can only concatenate str (not "int") to str
-- TEST CASE 3:
---- input:
1959
---- correct output:
Em 1959 a UFAM completou 50 anos de fundação.
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print("Em " + ano + ", a UFAM completou" + calculo + "anos de fundação.")
          ~~~~~~^~~~~
TypeError: can only concatenate str (not "int") to str
-- TEST CASE 4:
---- input:
1985
---- correct output:
Em 1985 a UFAM completou 76 anos de fundação.
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print("Em " + ano + ", a UFAM completou" + calculo + "anos de fundação.")
          ~~~~~~^~~~~
TypeError: can only concatenate str (not "int") to str
-- TEST CASE 5:
---- input:
2009
---- correct output:
Em 2009 a UFAM completou 100 anos de fundação.
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print("Em " + ano + ", a UFAM completou" + calculo + "anos de fundação.")
          ~~~~~~^~~~~
TypeError: can only concatenate str (not "int") to str
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 00:50:14)
-- CODE: 
ano = int(input())
calculo = ano - 1909
print(calculo)
print("Em", ano ,"a UFAM completou",calculo,"anos de fundação.")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2020
---- correct output:
Em 2020 a UFAM completou 111 anos de fundação.
---- user output:
Em 2020 a UFAM completou 111 anos de fundação.
-- TEST CASE 2:
---- input:
2024
---- correct output:
Em 2024 a UFAM completou 115 anos de fundação.
---- user output:
Em 2024 a UFAM completou 115 anos de fundação.
-- TEST CASE 3:
---- input:
1959
---- correct output:
Em 1959 a UFAM completou 50 anos de fundação.
---- user output:
Em 1959 a UFAM completou 50 anos de fundação.
-- TEST CASE 4:
---- input:
1985
---- correct output:
Em 1985 a UFAM completou 76 anos de fundação.
---- user output:
Em 1985 a UFAM completou 76 anos de fundação.
-- TEST CASE 5:
---- input:
2009
---- correct output:
Em 2009 a UFAM completou 100 anos de fundação.
---- user output:
Em 2009 a UFAM completou 100 anos de fundação.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
